# gitdiagram

./: .env.example  DIAGRAM_PROMPT.md  package.json  pnpm-lock.yaml
backend/: pyproject.toml
backend/app/routers/: generate.py
backend/app/services/: anthropic_service.py  litellm_service.py  llm_provider.py  model_config.py  pricing.py
backend/tests/: test_generate_router.py
src/app/[username]/[repo]/: repo-page-client.tsx
src/app/_actions/: cache.ts  repo.ts
src/app/api/generate/cost/: route.ts
src/app/api/generate/stream/: route.ts
src/components/: export-dropdown.tsx  main-card.tsx  mermaid-diagram.tsx
src/features/diagram/: export.ts
src/hooks/: useDiagram.ts
src/hooks/diagram/: useDiagramExport.ts  useDiagramStream.ts
src/server/db/: index.ts  schema.ts
src/server/generate/: anthropic.ts  litellm.ts  llm.ts  model-config.ts  pricing.ts
